@@ -635,6 +635,16 @@ public final class YearMonthDay
 
     //-----------------------------------------------------------------------
     /**
+     * Converts this object to a LocalDate with the same date and chronology.
+     *
+     * @return a LocalDate with the same date and chronology
+     */
+    public LocalDate toLocalDate() {
+        return new LocalDate(getYear(), getMonthOfYear(), getDayOfMonth(), getChronology());
+    }
+
+    //-----------------------------------------------------------------------
+    /**
      * Converts this YearMonthDay to a full datetime at midnight using the
      * default time zone.
      *
